--- a/source/css/index.css
+++ b/source/css/index.css
@@ -39,6 +39,17 @@ header {
     }
 }
 
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-top: 0px;
+    width: 100%;
+    font-weight: 300;
+    font-size: 0.75em;
+}
+
 .info {
     display: flex;
     justify-content: flex-start;
