--- a/source/css/main.css
+++ b/source/css/main.css
@@ -3,7 +3,7 @@
     font-style: normal;
 }
 body {
-    background-image: linear-gradient(0, rgb(253, 249, 249), lightgray);
+    background-image: linear-gradient(0, rgb(255, 251, 251), rgb(189, 186, 186));
     padding: 0%;
     margin: 0%;
 }
