switched some files over to more clear naming and fixed pathing

--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Sulphur+Point:wght@300;400;700&display=swap");
+
 * {
     font-family: "Sulphur Point", sans-serif;
     font-style: normal;
