--- a/source/css/index.css
+++ b/source/css/index.css
@@ -5,6 +5,7 @@ header {
     flex-wrap: wrap;
     margin-top: 0px;
     width: 100%;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
 
     position: fixed;
     top: 0;
