--- a/source/css/index.css
+++ b/source/css/index.css
@@ -1,45 +1,22 @@
-header {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 0px;
-    width: 100%;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.08), 0 2px 4px 0 rgba(0, 0, 0, 0.12);
+header > img {
+    margin: 5px;
+}
 
-    position: fixed;
-    top: 0;
-
-    background-color: darkgray;
-    &>img {
-        margin: 5px;
-    }
-    &>span {
-        font-size: 3em;
-        font-weight: 700;
-        letter-spacing: 5px;
-        margin: 5px;
-    }
-    &>a {
-        text-decoration: none;
-        font-size: 1.5em;
-        font-weight: 300;
-        border-width: 2px;;
-        border-style: solid;
-        border-radius: 10px;
-        color: black;
-        margin-left: auto;
-        margin-right: 5px;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        padding: 5px;
-        &:hover {
-            opacity: 50%;
-        }
-    }
-    &>div {
-        flex: 0 0 100%;
-        border: 1px solid gray;
+header > a {
+    text-decoration: none;
+    font-size: 1.5em;
+    font-weight: 300;
+    border-width: 2px;;
+    border-style: solid;
+    border-radius: 10px;
+    color: black;
+    margin-left: auto;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    &:hover {
+        opacity: 50%;
     }
 }
 
@@ -90,9 +67,4 @@ footer {
         max-width: 60%;
         height: auto;
     }
-}
-
-body {
-    padding: 0%;
-    margin: 0%;
 }
