--- a/source/css/index.css
+++ b/source/css/index.css
@@ -4,8 +4,7 @@ header>img {
 
 header>a {
     text-decoration: none;
-    font-size: 1.5em;
-    font-weight: 300;
+    font-size: 2em;
     border-width: 2px;
     border-style: solid;
     border-radius: 10px;
@@ -15,6 +14,7 @@ header>a {
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
+    background-color: #2596be;
 
     &:hover {
         opacity: 50%;
@@ -23,13 +23,7 @@ header>a {
 
 
 footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 0px;
-    width: 100%;
-    font-weight: 300;
+    text-align: center;
     font-size: 0.75em;
 }
 
@@ -40,16 +34,24 @@ footer {
     flex-wrap: wrap;
     margin-top: 1%;
     max-width: 100%;
-    padding-top: 100px;
-    padding-right: 0%;
 
     &>section {
-        &>h2 {
-            letter-spacing: 3px;
-        }
 
         margin-left: 3%;
-        max-width: 35%;
+        width: 33%;
+        padding: 35px;
+        border: solid 1px black;
+        border-radius: 25px 25px 25px 25px;
+        background-color: #5CB1CF;
+
+        &>h2 {
+            letter-spacing: 3px;
+            font-size: xx-large;
+        }
+
+        &>p {
+            font-size: x-large;
+        }
 
         &>a {
             text-decoration: none;
@@ -58,8 +60,10 @@ footer {
             border-width: 2px;
             border-style: solid;
             border-radius: 10px;
-            color: black;
+            border-color: black;
+            color: white;
             padding: 5px;
+            background-color: #202466;
 
             &:hover {
                 opacity: 50%;
@@ -74,14 +78,22 @@ footer {
     }
 }
 
-@media screen and (max-width: 500px) and (orientation: portrait) {
+@media screen and (max-width: 1000px) {
+
+    h2 {
+        font-size: 0.5em;
+    }
+
     .info {
+        display: block;
+        justify-content: center;
         &>section {
-            max-width: 100%;
+            margin: 20px auto;
+            width: 70vw;
         }
 
         &>img {
-            max-width: 100%;
+            display: none;
         }
     }
 }
