--- a/source/css/index.css
+++ b/source/css/index.css
@@ -5,8 +5,7 @@ header>img {
 header>a {
     text-decoration: none;
     font-size: 2em;
-    border-width: 2px;
-    border-style: solid;
+    border: 2px solid black;
     border-radius: 10px;
     color: black;
     margin-left: auto;
@@ -41,26 +40,27 @@ footer {
         width: 33%;
         padding: 35px;
         border: solid 1px black;
-        border-radius: 25px 25px 25px 25px;
+        border-radius: 25px;
         background-color: #5CB1CF;
 
         &>h2 {
             letter-spacing: 3px;
-            font-size: xx-large;
+            font-size: 2.5em;
         }
 
         &>p {
-            font-size: x-large;
+            font-size: 2em;
+        }
+
+        &>ul {
+            font-size: 1.5em;
         }
 
         &>a {
             text-decoration: none;
             font-size: 1.5em;
-            font-weight: 300;
-            border-width: 2px;
-            border-style: solid;
+            border: 2px solid black;
             border-radius: 10px;
-            border-color: black;
             color: white;
             padding: 5px;
             background-color: #202466;
