--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -1,30 +1,24 @@
-#main-container {
-  padding-left: 16px;
+#note-add {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-left: 10px;
 }
 
-#grid-container {
+.notes-grid {
   display: grid;
-}
-
-#main-grid {
-  display: grid;
-  grid-template-columns: auto auto;
-  gap: 12px;
-}
-
-#notes-grid {
-  display: grid;
-  border: 1px solid black;
-  padding: 16px;
-  border-radius: 16px;
-  margin-bottom: 12px;
+  grid-template-columns: auto auto auto;
+  gap: 10px;
+  margin: 0 20px;
 }
 
 .note-block {
+  border: 2px solid black;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 12px;
+  padding-left: 5px;
 }
 
 .note-button {
