--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -12,13 +12,21 @@
   margin: 0 20px;
 }
 
+.button-container {
+  display: flex;
+  gap: 5px;
+  margin-right: 5px;
+}
+
 .note-block {
   border: 2px solid black;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
   align-items: center;
   gap: 12px;
   padding-left: 5px;
+  padding: 5px;
 }
 
 .note-button {
