--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -1,32 +1,51 @@
 #note-add {
-  display: flex;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 0.8fr 0.2fr;
   gap: 10px;
   margin-left: 10px;
 }
 
+#note-add>* {
+  display: flex;
+  justify-content: center;
+}
+
+#notes-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 12px;
+}
+
+#main-container {
+  display: grid;
+  grid-template-columns: 0.8fr 0.2fr;
+}
+
 .notes-grid {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto;
   gap: 10px;
   margin: 0 20px;
 }
 
 .button-container {
   display: flex;
-  gap: 5px;
-  margin-right: 5px;
+  gap: 8px;
+  justify-content: flex-end;
+  width: 100%;
 }
 
 .note-block {
+  position: relative;
+  border-radius: 12px;
   border: 2px solid black;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
   gap: 12px;
-  padding-left: 5px;
-  padding: 5px;
+  padding: 12px;
 }
 
 .note-button {
@@ -42,6 +61,80 @@
   opacity: 70%;
 }
 
+.note-header {
+  position: relative;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+}
+
+.note-content {
+  padding-left: 8px;
+  width: 90%;
+  height: 200px;
+}
+
 .note-text {
-  font-size: 1.25em;
+  font-size: 1em;
+  margin-left: 0px;
+}
+
+.note-date {
+  font-size: 1em;
+  margin-left: auto;
+}
+
+.note-entry {
+  width: 90%;
+}
+
+.edit-note {
+  border-radius: 12px;
+  font-size: 1em;
+  width: 90%;
+  height: 220px;
+  resize: none;
+  padding: 8px;
+}
+
+.todo-grid {
+  display: grid;
+  grid-template-columns: 1;
+}
+
+.todo-grid>* {
+  display: flex;
+  justify-content: center;
+}
+
+#task-list {
+  list-style-type: none;
+  padding: 0px;
+  padding-top: 5px;
+  margin: 0px;
+}
+
+.preview {
+  padding: 0px;
+  margin: 0px;
+}
+
+.horizontal-details {
+  display: flex;
+  flex-direction: row;
+}
+
+.horizontal-details>details {
+  margin-right: 10px;
+  /* Optional: Add space between details */
+}
+
+.horizontal-details>details:last-child {
+  margin-right: 0;
+  /* Remove margin from the last details element */
 }
