--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -56,9 +56,36 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 12px;
+  gap: 8px;
   padding: 12px;
   padding-top: 0px;
+}
+
+.note-header {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding: 0px;
+}
+
+.note-title {
+  border-radius: 12px;
+  border-width: 0.5px;
+  padding: 2px;
+  padding-left: 4px;
+}
+
+.note-content {
+  width: 0;
+  margin: 0;
+  padding-left: 8px;
+  min-width: 90%;
+  height: 200px;
+  font-size: 1em;
+  overflow-wrap: break-word;
 }
 
 .note-button {
@@ -79,25 +106,10 @@
   opacity: 70%;
 }
 
-.note-header {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: nowrap;
-  width: 100%;
-  padding: 0px;
-}
-
-.note-content {
-  padding-left: 8px;
-  width: 90%;
-  height: 200px;
-}
 
 .note-text {
+  margin: 0px;
   font-size: 1em;
-  margin-left: 0px;
 }
 
 .note-date {
