--- a/source/css/project.css
+++ b/source/css/project.css
@@ -1,25 +1,17 @@
 .container{
     width: 80vw;
-    margin: 20px;
     font-size: 1em;
     font-weight: bold;
     font-family: 'Courier New', Courier, monospace
 }
 
-a {
-    color:#3D5D46;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    & > img {
-        max-width: 32px;
-    }
+img {
+    max-width: 128px;
 }
 
 ul{
     display: grid;
-    grid-template-columns: 15% 15% 15% 15%;
+    grid-template-columns: 0.2fr 0.2fr 0.2fr 0.2fr;
     gap: 10%;
 
     list-style-type: none;
@@ -71,3 +63,20 @@ h2{
     font-size: 100%;
 }
 
+#project-name-error-message {
+    background-color: rgba(252, 31, 31, 0.5);
+    border-style: solid;
+    border-color: rgba(252, 31, 31, 0.5);
+    border-radius: 5px;
+    margin: 0px;
+}
+
+.project-name {
+    text-align: center;
+    color:#3D5D46;
+    margin: 0px;
+}
+
+.project-link {
+    margin: 0px;
+}
