--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -89,6 +89,16 @@
   overflow-y: hidden;
 }
 
+.collapsed {
+  max-height: 200px;
+  transition: max-height 0.25s 0s;
+}
+
+.expanded {
+  max-height: 10000px;
+  transition: max-height 1s 0s;
+}
+
 .note-expand,
 .note-collapse {
   align-self: flex-start;
