--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -60,6 +60,35 @@
   gap: 8px;
   padding: 12px;
   padding-top: 0px;
+  animation: 1s create-note-animation;
+  transition: height 1s;
+}
+
+.delete-note {
+  animation: 1s delete-note-animation;
+}
+
+@keyframes create-note-animation {
+  from {
+    transform: scale(0);
+
+  }
+
+  to {
+    transform: scale(1.0);
+  }
+}
+
+@keyframes delete-note-animation {
+  from {
+    transform: scale(1.0);
+    max-height: 200px;
+  }
+
+  to {
+    max-height: 0;
+    transform: scale(0);
+  }
 }
 
 .note-header {
@@ -154,6 +183,7 @@
   resize: none;
   padding: 8px;
 }
+
 
 #todo-header {
   display: flex;
