Added link to date view from project.html, made date picker font size bigger

--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -213,6 +213,11 @@
   }
 }
 
+.date-selector {
+  font-size: 2em;
+  margin-left: 10px;
+}
+
 /* Styles for smaller screens */
 @media (max-width: 768px) {
   #main-container {
