--- a/source/css/project.css
+++ b/source/css/project.css
@@ -44,6 +44,24 @@ button {
     font-size: 80%;
 }
 
+#date-view {
+    text-decoration: none;
+    font-size: 2em;
+    border: 2px solid #674A2A;
+    border-radius: 10px;
+    color: black;
+    margin-left: auto;
+    margin-right: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    background-color: #ebd0b2;
+  
+    &:hover {
+        opacity: 50%;
+    }
+  }
+
 #new-project-name{
     width: auto;
 }
