--- a/specs/mockup/phase3/main-mockup.css
+++ b/specs/mockup/phase3/main-mockup.css
@@ -5,55 +5,68 @@
 */
 
 * {
-  font-family: "Sulphur Point", sans-serif;
-  font-style: normal;
+    font-family: "Sulphur Point", sans-serif;
+    font-style: normal;
 }
 
 html,
 body {
-  min-height: 100vh; /* Prevents tiling of background gradients or images */
-  max-width: 100vw; /* Gets rid of unnecessary scroll bar that appeared on some screens */
+    min-height: 100vh;
+    /* Prevents tiling of background gradients or images */
+    max-width: 100vw;
+    /* Gets rid of unnecessary scroll bar that appeared on some screens */
 }
 
 body {
-  background-color: #fff;
-  padding: 100px 0px 50px; /* 100px top to give space for sticky header can be adjusted as needed, 0px on side to allow header to occupy full screen 50px on bottom because I felt like it */
-  margin: 0px; /* There's a margin between html and body? */
+    background-color: #b5cfaf;
+    padding: 100px 0px 50px;
+    /* 100px top to give space for sticky header can be adjusted as needed, 0px on side to allow header to occupy full screen 50px on bottom because I felt like it */
+    margin: 0px;
+    /* There's a margin between html and body? */
+    /*font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;*/
+    /*font-family: Verdana, Geneva, Tahoma, sans-serif;*/
+    font-family: 'Courier New', Courier, monospace;
 }
 
 header {
-  /*
+    /*
     * This allows the header to lay the elements out depending on screen size and stretches header across the top of the screen
     */
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-wrap: wrap;
-  width: 100%;
-  position: fixed; /* Keeps header at top of screen through scrolling top sets it to top of screen */
-  top: 0;
-  color: white;
-  background-color: #202466;
-  border-bottom: 5px solid #92cbdf;
-  z-index: 1000;
-  /* Heading at top of specific page */
-  & > h1 {
-    font-size: 3em;
-    letter-spacing: 5px;
-    margin: 5px;
-  }
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    position: fixed;
+    /* Keeps header at top of screen through scrolling top sets it to top of screen */
+    top: 0;
+    color: white;
+    z-index: 1000;
+    /*background-color: #674A2A;*/
+    background-color: #708B64;
+    border-bottom: 5px solid #C4A179;
 
-  /* This handles the class of "back" buttons in the headers. Home button on project.html and back button on notes.html */
-  .back {
-    & > i {
-      font-size: 2em;
-      font-weight: 700;
-      letter-spacing: 5px;
-      margin: 3px;
-      color: white;
+    /* Heading at top of specific page */
+    &>h1 {
+        font-size: 3em;
+        letter-spacing: 5px;
+        margin: 5px;
+
     }
-    &:hover {
-      opacity: 60%;
+
+    /* This handles the class of "back" buttons in the headers. Home button on project.html and back button on notes.html */
+    .back {
+        &>i {
+            font-size: 2em;
+            font-weight: 700;
+            letter-spacing: 5px;
+            margin: 3px;
+            margin-left: 8px;
+            color: white;
+        }
+
+        &:hover {
+            opacity: 60%;
+        }
     }
-  }
 }
