--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -260,3 +260,24 @@
 .toggle-button {
   display: none;
 }
+
+.tag-and-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.tag-list {
+  display: flex;
+  justify-content: flex-start;
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+.tag-item {
+  margin: 5px;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-style: solid;
+  border-color: rgba(255, 255, 255, 0);
+  border-radius: 5px;
+}
