--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -45,9 +45,9 @@
 
 .button-container {
   display: flex;
+  flex-direction: row;
   gap: 8px;
-  justify-content: flex-end;
-  width: 100%;
+  justify-content: space-between;
 }
 
 .note-block {
