Making changes to Notes page with styling

--- a/source/css/index.css
+++ b/source/css/index.css
@@ -15,7 +15,7 @@ header>a {
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
-    background-color: #ebd0b2;
+    background-color: #b5cfaf;
 
     &:hover {
         opacity: 50%;
