--- a/source/css/main.css
+++ b/source/css/main.css
@@ -43,6 +43,8 @@ header {
     color: white;
     z-index: 1000;
     /*background-color: #674A2A;*/
+    /*background-color: #708B64;*/
+    /*border-bottom: 5px solid #275734;*/
     background-color: #708B64;
     border-bottom: 5px solid #C4A179;
 
