--- a/source/css/main.css
+++ b/source/css/main.css
@@ -43,10 +43,11 @@ header {
     color: white;
     z-index: 1000;
     /*background-color: #674A2A;*/
-    /*background-color: #708B64;*/
+    background-color: #b5cfaf;
     /*border-bottom: 5px solid #275734;*/
     background-color: #708B64;
-    border-bottom: 5px solid #C4A179;
+    /*border-bottom: 5px solid #C4A179;*/
+   /*border-bottom: 5px solid #708B64;*/
 
     /* Heading at top of specific page */
     &>h1 {
