--- a/source/css/main.css
+++ b/source/css/main.css
@@ -42,12 +42,12 @@ header {
     top: 0;
     color: #275734;
     z-index: 1000;
-    
-    /* removing header */
-
-    /* background-color: #674A2A; */
-    background-color: #c8e7aa;
-    /* border-bottom: 5px solid #C4A179; */
+    /*background-color: #674A2A;*/
+    background-color: #b5cfaf;
+    /*border-bottom: 5px solid #275734;*/
+    background-color: #708B64;
+    /*border-bottom: 5px solid #C4A179;*/
+   /*border-bottom: 5px solid #708B64;*/
 
     /* Heading at top of specific page */
     &>h1 {
