--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -15,10 +15,15 @@
   border-radius: 4px;
 }
 
+#create-note-button:hover {
+  opacity: 0.6; /* Adjust opacity value as needed */
+}
+
 #sort-notes-button {
+  position: relative;
   border-width: 0.5px;
   border-radius: 4px;
-  /*margin-left: auto;*/
+  margin-left: auto;
   grid-column: 1 / -1; 
   justify-self: end; 
 }
@@ -61,7 +66,7 @@
 .note-block {
   position: relative;
   border-radius: 12px;
-  border: 2px solid black;
+  border: 2px solid #708B64;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -71,8 +76,7 @@
   animation: 1s create-note-animation;
   transition: height 1s;
   background-color: rgba(255, 255, 255, 0.75);
-  max-width: 450px;
-  overflow: hidden;
+  max-width: 350px;
 }
 
 .delete-note {
@@ -115,7 +119,7 @@
 .note-title {
   border-radius: 12px;
   border-width: 0.5px;
-  padding: 2px;
+  padding: 10px;
   padding-left: 4px;
   white-space: nowrap;
   width: 50%;
