--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -281,3 +281,11 @@
   border-color: rgba(255, 255, 255, 0);
   border-radius: 5px;
 }
+
+.filtered-in {
+  display: flex;
+}
+
+.filtered-out {
+  display: none;
+}
