--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -256,15 +256,18 @@
 #toggle-date-view {
   text-decoration: none;
   font-size: 2em;
-  border: 2px solid #674A2A;
+  /*border: 2px solid #674A2A;*/
+  border: 2px solid #b5cfaf;
   border-radius: 10px;
-  color: black;
+  color: #275734;
+  font-weight: bold;
   margin-left: auto;
   margin-right: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
-  padding: 5px;
-  background-color: #ebd0b2;
+  padding: 2px;
+  /*background-color: #ebd0b2;*/
+  background-color: #b5cfaf;
 
   &:hover {
       opacity: 50%;
