--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -81,6 +81,7 @@
   transition: height 1s;
   background-color: rgba(255, 255, 255, 0.75);
   /*max-width: 350px;*/
+  /*height: 400px;*/ /* Set a fixed height */
 }
 
 .delete-note {
