--- a/source/css/index.css
+++ b/source/css/index.css
@@ -157,7 +157,7 @@ footer {
             font-size: 1.5em;
         }
 
-        &>a {
+        &>button {
             text-decoration: none;
             font-size: 1.5em;
             border: 2px solid #674A2A;
