fix tag filtering

--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -33,6 +33,10 @@
   margin-left: auto;
 }
 
+.filtered-out {
+  display: none !important;
+}
+
 #notes-header {
   display: flex;
   /*flex-direction: row;
