fix display for filtered-in

--- a/source/css/notes.css
+++ b/source/css/notes.css
@@ -37,6 +37,10 @@
   display: none !important;
 }
 
+.filtered-in {
+  display: flex !important;
+}
+
 #notes-header {
   display: flex;
   /*flex-direction: row;
