updated project page + matched button formatting on notes page/home page to the project page

--- a/source/css/todo.css
+++ b/source/css/todo.css
@@ -22,6 +22,10 @@
     height: 3em;
     border-radius: 12px;
     border: 1px solid black;
+
+    &:hover {
+        cursor:pointer;
+    }
 }
 
 .todo-grid {
