adjusted project grid to two columns for mobile also added additional top padding to body for mobile

--- a/source/css/project.css
+++ b/source/css/project.css
@@ -128,3 +128,9 @@ header{
         }
     }
 }
+
+@media screen and (max-width: 768px) {
+    ul {
+        grid-template-columns: auto auto;
+    }
+}
