removed dead code and updated docs

--- a/source/css/index.css
+++ b/source/css/index.css
@@ -19,7 +19,6 @@ header>a {
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 5px;
-    /* background-color: #ebd0b2; */
 
     &:hover {
         opacity: 75%;
@@ -34,13 +33,9 @@ footer {
 
 /* paw print styling */
 .image-container {
-    /* position: relative; */
-    /* display: flex;
-    align-items: center; */
     width: 100%;
     max-width: 659.1px;
     margin: 0 auto;
-    /* padding-bottom: 800px; */
     z-index: 2;
 }
 
@@ -129,7 +124,7 @@ footer {
 /* app descriptions */
 .info {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between ;
     align-items: center;
     flex-wrap: wrap;
     margin-top: 900px;
@@ -142,9 +137,7 @@ footer {
         margin-left: 3%;
         width: 33%;
         padding: 35px;
-        /* border: solid 1px #674A2A; */
         border-radius: 25px;
-        /* background-color: #FFF; */
 
         &>h2 {
             letter-spacing: 3px;
@@ -181,7 +174,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 768px) {
 
     h2 {
         font-size: 0.5em;
