--- a/source/css/index.css
+++ b/source/css/index.css
@@ -34,13 +34,9 @@ footer {
 
 /* paw print styling */
 .image-container {
-    /* position: relative; */
-    /* display: flex;
-    align-items: center; */
     width: 100%;
     max-width: 659.1px;
     margin: 0 auto;
-    /* padding-bottom: 800px; */
     z-index: 2;
 }
 
@@ -129,56 +125,38 @@ footer {
 /* app descriptions */
 .info {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    margin-top: 900px;
+    margin-top: 775px;
     max-width: 100%;
     position: relative;
     z-index: 1;
+}
+.launch h2 {
+    font-size: 2em;
+    color:#628745
+}
+.demo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center; /* Center align text */
+    width: 100%;
+    margin: 0 auto;
+}
 
-    &>section {
+.demo-container img {
+    box-shadow: 0 4px 8px rgba(39, 87, 52, 1); /* Add shadow behind the images */
+    margin-bottom: 25px; /* Add some space below each image for better spacing */
+    align-items: center;
+}
 
-        margin-left: 3%;
-        width: 33%;
-        padding: 35px;
-        /* border: solid 1px #674A2A; */
-        border-radius: 25px;
-        /* background-color: #FFF; */
-
-        &>h2 {
-            letter-spacing: 3px;
-            font-size: 2.5em;
-        }
-
-        &>p {
-            font-size: 2em;
-        }
-
-        &>ul {
-            font-size: 1.5em;
-        }
-
-        &>button {
-            text-decoration: none;
-            font-size: 1.5em;
-            border: 2px solid #275734;
-            border-radius: 10px;
-            color: white;
-            padding: 5px;
-            background-color: #275734;
-
-            &:hover {
-                opacity: 75%;
-            }
-        }
-    }
-
-    &>img {
-        margin-left: 2%;
-        max-width: 60%;
-        height: auto;
-    }
+.demo-container h2 {
+    white-space: nowrap; /* Prevent text from breaking into the next line */
+    font-size: 2.5em;
+    color:#275734;
+    align-items: center;
 }
 
 @media screen and (max-width: 1000px) {
@@ -202,4 +180,3 @@ footer {
         }
     }
 }
-
